[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/battle/BattleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/music/frogger.ogg" type="AudioStream" id=2]

[sub_resource type="Theme" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 377.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="GridContainer"]
margin_right = 338.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button3" type="Button" parent="GridContainer"]
margin_left = 684.0
margin_right = 1022.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button4" type="Button" parent="GridContainer"]
margin_top = 113.0
margin_right = 338.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button5" type="Button" parent="GridContainer"]
margin_left = 342.0
margin_top = 113.0
margin_right = 680.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button6" type="Button" parent="GridContainer"]
margin_left = 684.0
margin_top = 113.0
margin_right = 1022.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
